--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -11,9 +11,10 @@
     <title>Astro</title>
   </head>
   <body>
-    <h1>My Astro Site</h1>
+    <h1>My Astro Learning Blog</h1>
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
+    <p>This is where I will post about my journey learning Astro.</p>
   </body>
 </html>
