--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -81,3 +81,12 @@ h1 {
     display: none;
   }
 }
+
+html.dark {
+  background-color: #171630;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
